# ftp_client

./: CMakeLists.txt  README.md
3rd/curl/lib/: libcurl.exp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  FtpCore.cpp  FtpCore.h  FtpCoreCallBack.h
src/gui/: CMakeLists.txt  ftpwidget.cpp  ftpwidget.h  ftpwidget.ui  img.qrc  main.cpp  res.qrc  transprogresswidget.cpp  transprogresswidget.h  transprogresswidget.ui
src/gui/qss/: ElegantDark.qss  Ubuntu.qss
src/testing/: CMakeLists.txt  test01.cpp  test02.cpp  test03.cpp
src/utils/: CMakeLists.txt  CurlTools.cpp  CurlTools.h  ThreadPool.h
